Fix overflow issue on mobile devices

--- a/src/app.scss
+++ b/src/app.scss
@@ -114,10 +114,17 @@ nav {
   }
 }
 
+.background-container {
+  position: absolute;
+  inset: 0;
+  overflow: hidden;
+}
+
 .background {
   position: absolute;
   top: 50%;
   left: 50%;
+  overflow: hidden;
   width: max(100vw, 100vh);
   height: max(100vw, 100vh);
   transform: translate(-50%, -50%);
